# gala

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.MD  CLAUDE.md  CONTRIBUTING.MD  MODULE.bazel  README.MD  README.md  WORKSPACE  extensions.bzl  gala.bzl  gala_deps.bzl  go.mod  go.sum
cmd/gala/: BUILD.bazel  main.go
cmd/gala/commands/: BUILD.bazel  build.go  clean.go  mod.go  mod_add.go  mod_graph.go  mod_init.go  mod_remove.go  mod_tidy.go  mod_update.go  mod_verify.go  root.go  run.go  transpile.go  version.go
cmd/gala_bootstrap/: BUILD.bazel  main.go
cmd/gala_test_gen/: BUILD.bazel  main.go
cmd/gala_test_runner/: BUILD.bazel  main.go
cmd/stdlib_gen/: BUILD.bazel  main.go
collection_immutable/: BUILD.bazel  array.gala  array_test.gala  go_native_perf_test.go  hashmap.gala  hashmap_test.gala  hashset.gala  hashset_test.gala  inference_test.gala  list.gala  list_test.gala  perf_test.gala  treemap.gala  treemap_test.gala  treeset.gala  treeset_test.gala  validation_test.gala
collection_mutable/: BUILD.bazel  array.gala  array_test.gala  go_native_perf_test.go  hashmap.gala  hashmap_test.gala  hashset.gala  hashset_test.gala  list.gala  list_test.gala  perf_test.gala  treemap.gala  treemap_test.gala  treeset.gala  treeset_test.gala
concurrent/: BUILD.bazel  execution_context.go  future.gala  future_test.gala
examples/: BUILD.bazel  apply_method.gala  block_lambda_generic_func.gala  block_lambda_return.gala  block_lambda_return.out  bool_operator.gala  bool_operator.out  callback_generic_param.gala  callback_generic_param.out  char_and_raw_string.gala  char_and_raw_string.out  complex.gala  complex.out  copy_and_equal.gala  copy_and_equal.out  custom_seq_pattern.gala  custom_seq_pattern.out  either.gala  either.out  either_map_flatmap.gala  either_map_flatmap.out  either_methods.gala  either_methods.out  execution_context.gala  execution_context.out  expr_body_multiline_lambda.gala  expr_body_multiline_lambda.out  extractor_type_inference.gala  extractor_type_inference.out  for_loops.gala  for_loops.out  func_struct_field.gala  func_struct_field.out  future_get_type_chain.gala  future_pattern_match.gala  future_pattern_match.out  generic_interface.gala  generic_method_constraint.gala  generic_method_cycle.gala  generic_method_cycle.out  (+145 more)
examples/doc_verify/: concurrent_md.gala  concurrent_md.out  examples_md.gala  examples_md.out  gala_md_basics.gala  gala_md_basics.out  gala_md_monads.gala  gala_md_monads.out  gala_md_patterns.gala  gala_md_patterns.out  immutable_collections_md.gala  immutable_collections_md.out  mutable_collections_md.gala  mutable_collections_md.out  stream_md_examples.gala  stream_md_examples.out  string_utils_md.gala  string_utils_md.out  time_utils_md.gala  time_utils_md.out
examples/external_dep/: BUILD.bazel  main.gala
examples/foldleft_method/: foldleft_method.out  main.gala
examples/lib/: generic.gala
examples/multi_file/: greeter.gala  main.gala  multi_file.out
examples/multi_file_lib/: ops.gala  types.gala
examples/multi_file_option/: lookup.gala  main.gala  multi_file_option.out
examples/multi_file_types/: main.gala  model.gala  multi_file_types.out
examples/struct_field_unwrap/: main.gala  struct_field_unwrap.out  types.gala
examples/wrapper_method_lambda/: main.gala
galaerr/: BUILD.bazel  errors.go  errors_test.go
ide/intellij/: BUILD.bazel  README.md  build.gradle.kts  settings.gradle.kts
internal/depman/fetch/: BUILD.bazel  cache.go  config.go  fetch_test.go  git.go
internal/depman/graph/: BUILD.bazel  builder.go  cycle.go  graph_test.go  mvs.go  types.go
internal/depman/mod/: BUILD.bazel  mod_test.go  parser.go  types.go  writer.go
internal/depman/sum/: BUILD.bazel  hash.go  parser.go  sum_test.go  types.go  writer.go
internal/depman/version/: BUILD.bazel  constraint.go  resolver.go  semver.go  version_test.go
internal/parser/: BUILD.bazel  grammar_test.go  parser.go  parser_test.go
internal/parser/grammar/: BUILD.bazel  gala.g4
internal/stdlib/: BUILD.bazel  stdlib.go
internal/transpiler/: BUILD.bazel  README.MD  README.md  parser.go  transpiler.go  types.go
internal/transpiler/analyzer/: BUILD.bazel  analyzer.go  analyzer_test.go  test_helper.go
internal/transpiler/generator/: BUILD.bazel  generator.go  generator_test.go
internal/transpiler/infer/: BUILD.bazel  expr.go  infer.go  infer_test.go  types.go
internal/transpiler/module/: BUILD.bazel  resolver.go  resolver_test.go
internal/transpiler/registry/: BUILD.bazel  registry.go  registry_test.go  std.go
internal/transpiler/transformer/: BUILD.bazel  apply_test.go  assignment_test.go  bridge.go  calls.go  conflict_test.go  constructors.go  control_flow_test.go  copy_test.go  declarations.go  default_immutability_test.go  dot_import_test.go  equal_test.go  expressions.go  fix001_debug_test.go  functions_test.go  generics_test.go  immutable_test.go  immutable_unwrapping_test.go  import_test.go  imports.go  imports_test.go  lambdas.go  literals_test.go  match.go  match_return_type_test.go  match_test.go  methods.go  methods_test.go  multi_var_test.go  option_test.go  patterns.go  pointer_receiver_test.go  postfix.go  recursive_immutable_test.go  scope.go  sealed.go  statements.go  structs_test.go  (+10 more)
lazy/: BUILD.bazel  lazy.gala  lazy_test.gala
std/: BUILD.bazel  as_test.go  constptr.gala  either.gala  errors.gala  hashable.gala  immutable.gala  immutable.go  interfaces.go  iterable.gala  option.gala  option.go  option_test.go  ordered.gala  seq.gala  std_test.gala  try.gala  tuple.gala  types.go  unapply.go  unapply_test.go
std/tests/: BUILD.bazel  main.gala
stream/: BUILD.bazel  stream.gala  stream_test.gala
string_utils/: BUILD.bazel  go_native_perf_test.go  perf_test.gala  strings.gala  strings_test.gala
test/: BUILD.bazel  assertions.gala  bench.gala  framework.gala  framework_test.gala  table.gala
test/framework_test/: main.gala
test/std_test/: main.gala
test/tests/: BUILD.bazel  main.gala
time_utils/: BUILD.bazel  time_utils.gala  time_utils_test.gala
tuple_lib_repro/: BUILD.bazel  lib.gala  lib_test.gala
(+45 files in other folders)
