load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix martianoff/gala
gazelle(
    name = "gazelle",
    args = [],
)

# gazelle:prefix martianoff/gala
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

filegroup(
    name = "all_gala_sources",
    srcs = [
        "//collection_immutable:array.gala",
        "//collection_immutable:list.gala",
        "//std:either.gala",
        "//std:immutable.gala",
        "//std:option.gala",
        "//std:tuple.gala",
    ],
    visibility = ["//visibility:public"],
)
