load("@gazelle//:def.bzl", "gazelle")

exports_files(
    ["go.mod"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix martianoff/gala
gazelle(
    name = "gazelle",
    args = [],
)

# gazelle:prefix martianoff/gala
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

filegroup(
    name = "all_gala_sources",
    srcs = [
        "//collection_immutable:array.gala",
        "//collection_immutable:list.gala",
        "//std:constptr.gala",
        "//std:either.gala",
        "//std:errors.gala",
        "//std:hashable.gala",
        "//std:immutable.gala",
        "//std:iterable.gala",
        "//std:option.gala",
        "//std:ordered.gala",
        "//std:seq.gala",
        "//std:try.gala",
        "//std:tuple.gala",
        "//stream:stream.gala",
    ],
    visibility = ["//visibility:public"],
)
