load("//:gala.bzl", "gala_library", "gala_transpile")
load("@rules_go//go:def.bzl", "go_library")

exports_files([
    "list.gala",
    "array.gala",
])

# Filegroup for all GALA source files in collection_immutable
filegroup(
    name = "gala_sources",
    srcs = glob(["*.gala"], exclude = ["*_test.gala"]),
    visibility = ["//visibility:public"],
)

gala_transpile(
    name = "list_go",
    src = "list.gala",
    out = "list.go",
)

gala_transpile(
    name = "array_go",
    src = "array.gala",
    out = "array.go",
)

go_library(
    name = "collection_immutable",
    srcs = [
        "array.go",
        "list.go",
    ],
    importpath = "martianoff/gala/collection_immutable",
    visibility = ["//visibility:public"],
    deps = ["//std"],
)
