load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//:gala.bzl", "gala_binary", "gala_bootstrap_transpile", "gala_go_test", "gala_library")

exports_files([
    "list.gala",
    "array.gala",
    "hashmap.gala",
    "hashset.gala",
    "treeset.gala",
])

# Filegroup for all GALA source files in collection_immutable
filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

gala_bootstrap_transpile(
    name = "list_go",
    src = "list.gala",
    out = "list.gen.go",
)

gala_bootstrap_transpile(
    name = "array_go",
    src = "array.gala",
    out = "array.gen.go",
)

gala_bootstrap_transpile(
    name = "hashset_go",
    src = "hashset.gala",
    out = "hashset.gen.go",
)

gala_bootstrap_transpile(
    name = "treeset_go",
    src = "treeset.gala",
    out = "treeset.gen.go",
)

gala_bootstrap_transpile(
    name = "hashmap_go",
    src = "hashmap.gala",
    out = "hashmap.gen.go",
)

go_library(
    name = "collection_immutable",
    srcs = [
        "array.gen.go",
        "hashmap.gen.go",
        "hashset.gen.go",
        "list.gen.go",
        "treeset.gen.go",
    ],
    importpath = "martianoff/gala/collection_immutable",
    visibility = ["//visibility:public"],
    deps = [
        "//std",
        "//go_interop",
    ],
)

gala_go_test(
    name = "array_test",
    srcs = ["array_test.gala"],
    deps = [":collection_immutable"],
)

gala_go_test(
    name = "list_test",
    srcs = ["list_test.gala"],
    deps = [":collection_immutable"],
)

gala_go_test(
    name = "inference_test",
    srcs = ["inference_test.gala"],
    deps = [":collection_immutable"],
)

gala_go_test(
    name = "validation_test",
    srcs = ["validation_test.gala"],
    deps = [":collection_immutable"],
)

gala_go_test(
    name = "hashset_test",
    srcs = ["hashset_test.gala"],
    deps = [":collection_immutable"],
)

gala_go_test(
    name = "treeset_test",
    srcs = ["treeset_test.gala"],
    deps = [
        ":collection_immutable",
        "//go_interop",
    ],
)

gala_go_test(
    name = "hashmap_test",
    srcs = ["hashmap_test.gala"],
    deps = [
        ":collection_immutable",
        "//go_interop",
    ],
)

# Performance benchmarks
gala_binary(
    name = "perf_gala",
    src = "perf_test.gala",
    deps = [":collection_immutable"],
)

# Note: go_native_perf_test.go is a standalone benchmark file (package main)
# Run with: bazel run //collection_immutable:perf_go
go_binary(
    name = "perf_go",
    srcs = ["go_native_perf_test.go"],
)

# Note: Perf test is run manually via go_binary above

# Note: go_native_perf_test.go is package main so cannot be used as embed
# Note: go_native_perf_test.go is package main so cannot be used as embed
# go_test(
#     name = "collection_immutable_test",
#     srcs = ["go_native_perf_test.go"],
#     embed = [":collection_immutable_lib"],
# )

# go_test(
#     name = "collection_immutable_test",
#     srcs = ["go_native_perf_test.go"],
#     embed = [":collection_immutable_lib"],
# )

# go_test(
#     name = "collection_immutable_test",
#     srcs = ["go_native_perf_test.go"],
#     embed = [":collection_immutable_lib"],
# )
