load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//:gala.bzl", "gala_binary", "gala_go_test", "gala_library", "gala_transpile")

exports_files([
    "list.gala",
    "array.gala",
    "hashset.gala",
    "treeset.gala",
])

# Filegroup for all GALA source files in collection_mutable
filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

gala_transpile(
    name = "list_go",
    src = "list.gala",
    out = "list.go",
)

gala_transpile(
    name = "array_go",
    src = "array.gala",
    out = "array.go",
)

gala_transpile(
    name = "hashset_go",
    src = "hashset.gala",
    out = "hashset.go",
)

gala_transpile(
    name = "treeset_go",
    src = "treeset.gala",
    out = "treeset.go",
)

gala_transpile(
    name = "hashmap_go",
    src = "hashmap.gala",
    out = "hashmap.go",
)

go_library(
    name = "collection_mutable",
    srcs = [
        "array.go",
        "hashmap.go",
        "hashset.go",
        "list.go",
        "treeset.go",
    ],
    importpath = "martianoff/gala/collection_mutable",
    visibility = ["//visibility:public"],
    deps = [
        "//std",
        "//go_interop",
    ],
)

gala_go_test(
    name = "array_test",
    srcs = ["array_test.gala"],
    deps = [":collection_mutable", "//go_interop"],
)

gala_go_test(
    name = "list_test",
    srcs = ["list_test.gala"],
    deps = [":collection_mutable", "//go_interop"],
)

gala_go_test(
    name = "hashset_test",
    srcs = ["hashset_test.gala"],
    deps = [":collection_mutable", "//go_interop"],
)

gala_go_test(
    name = "treeset_test",
    srcs = ["treeset_test.gala"],
    deps = [":collection_mutable", "//go_interop"],
)

gala_go_test(
    name = "hashmap_test",
    srcs = ["hashmap_test.gala"],
    deps = [":collection_mutable", "//go_interop"],
)

# Performance benchmarks - GALA mutable collections
gala_binary(
    name = "perf_gala",
    src = "perf_test.gala",
    deps = [":collection_mutable"],
)

# Performance benchmarks - Go native collections
# Run with: bazel run //collection_mutable:perf_go
go_binary(
    name = "perf_go",
    srcs = ["go_native_perf_test.go"],
)

