load("@rules_go//go:def.bzl", "go_library")
load("//:gala.bzl", "gala_bootstrap_transpile", "gala_go_test")

exports_files([
    "future.gala",
    "execution_context.go",
])

filegroup(
    name = "gala_sources",
    srcs = glob(
        ["*.gala"],
        exclude = ["*_test.gala"],
    ),
    visibility = ["//visibility:public"],
)

gala_bootstrap_transpile(
    name = "future_go",
    src = "future.gala",
    out = "future.gen.go",
)

go_library(
    name = "concurrent",
    srcs = [
        "execution_context.go",
        "future.gen.go",
    ],
    importpath = "martianoff/gala/concurrent",
    visibility = ["//visibility:public"],
    deps = [
        "//go_interop",
        "//std",
        "//collection_immutable",
    ],
)

gala_go_test(
    name = "future_test",
    srcs = ["future_test.gala"],
    deps = [
        ":concurrent",
        "//collection_immutable",
        "//go_interop",
    ],
)
