load("//:gala.bzl", "gala_binary", "gala_library", "gala_test")

gala_library(
    name = "mathlib",
    src = "mathlib/math.gala",
    importpath = "martianoff/gala/examples/mathlib",
    visibility = ["//visibility:public"],
)

gala_library(
    name = "lib",
    src = "lib/generic.gala",
    importpath = "martianoff/gala/examples/lib",
    visibility = ["//visibility:public"],
)

gala_test(
    name = "hello",
    src = "hello.gala",
    expected = "hello.out",
)

gala_test(
    name = "with_main",
    src = "with_main.gala",
    expected = "with_main.out",
)

gala_test(
    name = "complex",
    src = "complex.gala",
    expected = "complex.out",
)

gala_test(
    name = "bool_operator",
    src = "bool_operator.gala",
    expected = "bool_operator.out",
)

gala_test(
    name = "imports",
    src = "imports.gala",
    expected = "imports.out",
)

gala_test(
    name = "use_lib",
    src = "use_lib.gala",
    expected = "use_lib.out",
    deps = [":mathlib"],
)

gala_test(
    name = "multi_vars",
    src = "multi_vars.gala",
    expected = "multi_vars.out",
)

gala_test(
    name = "struct_features",
    src = "struct_features.gala",
    expected = "struct_features.out",
)

gala_test(
    name = "copy_and_equal",
    src = "copy_and_equal.gala",
    expected = "copy_and_equal.out",
)

gala_test(
    name = "option_complex",
    src = "option_complex.gala",
    expected = "option_complex.out",
)

gala_test(
    name = "generic_methods",
    src = "generic_methods.gala",
    expected = "generic_methods.out",
)

gala_test(
    name = "generic_method_constraint",
    src = "generic_method_constraint.gala",
    expected = "generic_method_constraint.out",
)

gala_test(
    name = "match_extractors",
    src = "match_extractors.gala",
    expected = "match_extractors.out",
)

gala_test(
    name = "tuple",
    src = "tuple.gala",
    expected = "tuple.out",
)

gala_test(
    name = "either",
    src = "either.gala",
    expected = "either.out",
)

gala_test(
    name = "apply_method",
    src = "apply_method.gala",
    expected = "apply_method.out",
)

gala_test(
    name = "option_apply_unapply",
    src = "option_apply_unapply.gala",
    expected = "option_apply_unapply.out",
)

gala_test(
    name = "type_match",
    src = "type_match.gala",
    expected = "type_match.out",
)

gala_test(
    name = "nested_type_match",
    src = "nested_type_match.gala",
    expected = "nested_type_match.out",
)

gala_test(
    name = "interface",
    src = "interface.gala",
    expected = "interface.out",
)

gala_test(
    name = "generic_interface",
    src = "generic_interface.gala",
    expected = "generic_interface.out",
)

gala_test(
    name = "generic_wrap_match",
    src = "generic_wrap_match.gala",
    expected = "generic_wrap_match.out",
)

gala_test(
    name = "pattern_match_filter",
    src = "pattern_match_filter.gala",
    expected = "pattern_match_filter.out",
)

gala_test(
    name = "use_lib_generic",
    src = "use_lib_generic.gala",
    expected = "use_lib_generic.out",
    deps = [":lib"],
)

gala_test(
    name = "use_lib_qualified",
    src = "use_lib_qualified.gala",
    expected = "use_lib_generic.out",
    deps = [":lib"],
)

gala_test(
    name = "use_lib_alias",
    src = "use_lib_alias.gala",
    expected = "use_lib_generic.out",
    deps = [":lib"],
)

gala_test(
    name = "unwrapping",
    src = "unwrapping.gala",
    expected = "unwrapping.out",
)

gala_test(
    name = "hm_inference",
    src = "hm_inference.gala",
    expected = "hm_inference.out",
)

gala_test(
    name = "hm_unwrapping",
    src = "hm_unwrapping.gala",
    expected = "hm_unwrapping.out",
)

gala_test(
    name = "hm_generic_unwrapping",
    src = "hm_generic_unwrapping.gala",
    expected = "hm_unwrapping.out",
)

gala_test(
    name = "hm_generic_identity_unwrapping",
    src = "hm_generic_identity_unwrapping.gala",
    expected = "hm_generic_identity_unwrapping.out",
)

gala_test(
    name = "hm_advanced_unwrapping",
    src = "hm_advanced_unwrapping.gala",
    expected = "hm_unwrapping.out",
)

gala_test(
    name = "if_else_unwrapping",
    src = "if_else_unwrapping.gala",
    expected = "if_else_unwrapping.out",
)

gala_test(
    name = "unapply_inference",
    src = "unapply_inference.gala",
    expected = "unapply_inference.out",
)

gala_test(
    name = "generic_method_cycle",
    src = "generic_method_cycle.gala",
    expected = "generic_method_cycle.out",
)

gala_test(
    name = "tuple_syntax",
    src = "tuple_syntax.gala",
    expected = "tuple_syntax.out",
)

gala_test(
    name = "tuple_field_access",
    src = "tuple_field_access.gala",
    expected = "tuple_field_access.out",
    deps = ["//collection_immutable"],
)

gala_test(
    name = "list_pattern_match",
    src = "list_pattern_match.gala",
    expected = "list_pattern_match.out",
    deps = ["//collection_immutable"],
)

gala_test(
    name = "seq_pattern_match",
    src = "seq_pattern_match.gala",
    expected = "seq_pattern_match.out",
    deps = ["//collection_immutable"],
)

gala_test(
    name = "custom_seq_pattern",
    src = "custom_seq_pattern.gala",
    expected = "custom_seq_pattern.out",
    deps = ["//go_interop"],
)

gala_test(
    name = "mutable_collections",
    src = "mutable_collections.gala",
    expected = "mutable_collections.out",
    deps = ["//collection_mutable"],
)

gala_test(
    name = "try_basic",
    src = "try_basic.gala",
    expected = "try_basic.out",
)

# Temporarily enabled for debugging
gala_test(
    name = "try_recovery",
    src = "try_recovery.gala",
    expected = "try_recovery.out",
)

gala_test(
    name = "lambda_type_inference",
    src = "lambda_type_inference.gala",
    expected = "lambda_type_inference.out",
)

gala_test(
    name = "expr_body_multiline_lambda",
    src = "expr_body_multiline_lambda.gala",
    expected = "expr_body_multiline_lambda.out",
)

gala_test(
    name = "hashmap",
    src = "hashmap.gala",
    expected = "hashmap.out",
    deps = [
        "//collection_immutable",
        "//collection_mutable",
    ],
)

gala_test(
    name = "partial_function",
    src = "partial_function.gala",
    expected = "partial_function.out",
    deps = [
        "//collection_immutable",
    ],
)

gala_test(
    name = "pf_repro",
    src = "pf_repro.gala",
    expected = "pf_repro.out",
    deps = [
        "//collection_immutable",
    ],
)

gala_test(
    name = "callback_generic_param",
    src = "callback_generic_param.gala",
    expected = "callback_generic_param.out",
)

# TODO: Fix match expression interface return type compatibility
# gala_test(
#     name = "match_interface_return",
#     src = "match_interface_return.gala",
#     expected = "match_interface_return.out",
# )

gala_test(
    name = "future_pattern_match",
    src = "future_pattern_match.gala",
    expected = "future_pattern_match.out",
    deps = [
        "//collection_immutable",
        "//concurrent",
    ],
)

gala_test(
    name = "extractor_type_inference",
    src = "extractor_type_inference.gala",
    expected = "extractor_type_inference.out",
    deps = ["//concurrent"],
)

gala_test(
    name = "execution_context",
    src = "execution_context.gala",
    expected = "execution_context.out",
    deps = [
        "//collection_immutable",
        "//concurrent",
    ],
)

gala_test(
    name = "block_lambda_return",
    src = "block_lambda_return.gala",
    expected = "block_lambda_return.out",
)

gala_test(
    name = "pointer_semantics",
    src = "pointer_semantics.gala",
    expected = "pointer_semantics.out",
)

gala_test(
    name = "func_struct_field",
    src = "func_struct_field.gala",
    expected = "func_struct_field.out",
)

gala_test(
    name = "match_generic_inference",
    src = "match_generic_inference.gala",
    expected = "match_generic_inference.out",
)

# Transpiler issue repro tests
gala_test(
    name = "tuple_field_unwrap",
    src = "tuple_field_unwrap.gala",
    expected = "tuple_field_unwrap.out",
)

gala_test(
    name = "lambda_return_generic",
    src = "lambda_return_generic.gala",
    expected = "lambda_return_generic.out",
)

gala_test(
    name = "return_match",
    src = "return_match.gala",
    expected = "return_match.out",
)

gala_test(
    name = "tuple_shorthand_generic",
    src = "tuple_shorthand_generic.gala",
    expected = "tuple_shorthand_generic.out",
)

gala_test(
    name = "tuple_shorthand_mutable",
    src = "tuple_shorthand_mutable.gala",
    expected = "tuple_shorthand_mutable.out",
)

gala_test(
    name = "tuple_shorthand_array_index",
    src = "tuple_shorthand_array_index.gala",
    expected = "tuple_shorthand_array_index.out",
    deps = ["//go_interop"],
)

# Regression test for std type qualification in lambda parameters
gala_test(
    name = "std_type_in_lambda",
    src = "std_type_in_lambda.gala",
    expected = "std_type_in_lambda.out",
)
